fix (FormLabel): prevent external spacing styles from cascading
fixes #145

--- a/src/components/FormLabel/FormLabel.module.scss
+++ b/src/components/FormLabel/FormLabel.module.scss
@@ -3,6 +3,8 @@
   color: var(--color-font-base);
   font-size: var(--size-font-sm);
   font-weight: 700;
+  margin: 0;
+  padding: 0;
 
   &.disabled {
     color: var(--color-font-grey-light);
